infra/falco/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: falco-sidekick-ui-ingress
  namespace: falco
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: falco.local # Change it to your dns
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-falco
            port:
              number: 2802
